Fix header sizing issue on mobile devices

--- a/client/css/style.css
+++ b/client/css/style.css
@@ -93,7 +93,7 @@
     align-items: center;
     font-size: 1rem;
     flex-grow: 1;
-    padding-right: 20px
+    /*padding-right: 20px*/
 }
 
 /*match close button to title and postion size*/
@@ -109,7 +109,7 @@
 
 #search-box-container {
     border-bottom: 2px solid #fff;
-    width: 100%;
+    width: 85%;
     margin-bottom: 5px;
     line-height: 1.2;
 }
@@ -449,8 +449,3 @@
     .navlabel {display: inherit}
 }
 
-@media (max-width: 376px)  {
-    .event-title-container {
-        max-width:270px;
-    }
-}
